manifests/block-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: block-dashboard
  labels:
    app: block-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: block-dashboard
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: block-dashboard-deployment
  labels:
    app: block-dashboard
spec:
  template:
    metadata:
      labels:
        app: block-dashboard
    spec:
      containers:
      - image: anthonyamanse/block-dashboard:test-event
        imagePullPolicy: Always
        name: block-dashboard
        ports:
        - containerPort: 8080
