manifests/events.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: events
  labels:
    app: events
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: events
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: events-deployment
  labels:
    app: events
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - image: anthonyamanse/events:2.0
          imagePullPolicy: Always
          name: events
          volumeMounts:
            - name: mongodb-cert
              mountPath: "/etc/ssl"
              readOnly: true
          ports:
            - containerPort: 8080
      volumes:
        - name: mongodb-cert
          secret:
            secretName: mongodb-cert-secret
