manifests/fitcoin-ca.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcoin-ca
  labels:
    app: fitcoin-ca
spec:
  type: ClusterIP
  ports:
    - port: 7054
  selector:
    app: fitcoin-ca
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fitcoin-ca-deployment
  labels:
    app: fitcoin-ca
spec:
  template:
    metadata:
      labels:
        app: fitcoin-ca
    spec:
      containers:
      - image: hyperledger/fabric-ca:x86_64-1.0.6
        imagePullPolicy: Always
        command: ["sh", "-c", "sleep 5 && while [ ! -f /ca/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; fabric-ca-server start --db.datasource /db/fitcoin-fabric-ca-server.db"]
        # args: ["start","--db.datasource","db/fitcoin-fabric-ca-server.db"]
        name: fitcoin-ca
        ports:
        - containerPort: 7054
        volumeMounts:
        - name: fitcoin-ca-storage
          mountPath: /db
          subPath: fitcoin-ca-db-new
        - name: shared-artifacts-storage
          mountPath: /ca
          subPath: fitcoin-ca-config
      volumes:
      - name: fitcoin-ca-storage
        persistentVolumeClaim:
          claimName: org-ca-claim
      - name: shared-artifacts-storage
        persistentVolumeClaim:
          claimName: shared-artifacts-claim
