manifests/fitcoin-statedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitcoin-statedb
  labels:
    app: fitcoin-statedb
spec:
  type: ClusterIP
  ports:
    - port: 5984
  selector:
    app: fitcoin-statedb
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fitcoin-statedb-deployment
  labels:
    app: fitcoin-statedb
spec:
  template:
    metadata:
      labels:
        app: fitcoin-statedb
    spec:
      containers:
      - image: ishangulhane/fabric-couchdb
        imagePullPolicy: Always
        name: fitcoin-statedb
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: shared-storage
          mountPath: /opt/couchdb/data
          subPath: fitcoin-statedb-new
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-storage-claim
