manifests/orderer0.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderer0
  labels:
    app: orderer0
spec:
  type: ClusterIP
  ports:
    - port: 7050
      protocol: TCP
  selector:
    app: orderer0
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: orderer0-deployment
  labels:
    app: orderer0
spec:
  template:
    metadata:
      labels:
        app: orderer0
    spec:
      containers:
      - image: hyperledger/fabric-orderer:x86_64-1.0.6
        imagePullPolicy: Always
        workingDir: /orderer
        command: ["sh", "-c", "sleep 5 && while [ ! -f /orderer/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; orderer"]
        name: orderer0
        ports:
        - containerPort: 7050
          name: orderer0
        volumeMounts:
          - name: orderer0-storage
            mountPath: /var/hyperledger/production
            subPath: orderer0-new
          - name: shared-artifacts-storage
            mountPath: /orderer
            subPath: orderer0-config
      volumes:
        - name: orderer0-storage
          persistentVolumeClaim:
            claimName: peer-claim
        - name: shared-artifacts-storage
          persistentVolumeClaim:
            claimName: shared-artifacts-claim
