manifests/rabbitclient-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitclient-api
  labels:
    app: rabbitclient-api
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: rabbitclient-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rabbitclient-api-deployment
  labels:
    app: rabbitclient-api
spec:
  template:
    metadata:
      labels:
        app: rabbitclient-api
    spec:
      containers:
      - image: anthonyamanse/kubecon-rabbitclient-api:test-event
        imagePullPolicy: Always
        name: rabbitclient-api
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: secret-volume
            mountPath: /host/var/run/secrets/config
      volumes:
        - name: secret-volume
          secret:
            secretName: secret-config
            items:
              - key: config.json
                path: config
