manifests/registeree.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registeree
  labels:
    app: registeree
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: registeree
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registeree-deployment
  labels:
    app: registeree
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registeree
    spec:
      containers:
        - image: anthonyamanse/registeree-api:test-event
          imagePullPolicy: Always
          name: registeree
          volumeMounts:
            - name: mongodb-cert
              mountPath: "/etc/ssl"
              readOnly: true
          ports:
            - containerPort: 8080
      volumes:
        - name: mongodb-cert
          secret:
            secretName: mongodb-cert-secret
