manifests/shop-ca.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-ca
  labels:
    app: shop-ca
spec:
  type: ClusterIP
  ports:
    - port: 7054
  selector:
    app: shop-ca
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: shop-ca-deployment
  labels:
    app: shop-ca
spec:
  template:
    metadata:
      labels:
        app: shop-ca
    spec:
      containers:
      - image: hyperledger/fabric-ca:x86_64-1.0.6
        imagePullPolicy: Always
        command: ["sh", "-c", "sleep 5 && while [ ! -f /ca/bootstrapped ]; do echo Waiting for bootstrap; sleep 1; done; fabric-ca-server start --db.datasource /db/shop-fabric-ca-server.db"]
        # args: ["start","--db.datasource","db/shop-fabric-ca-server.db"]
        name: shop-ca
        ports:
        - containerPort: 7054
        volumeMounts:
        - name: shared-storage
          mountPath: /db
          subPath: shop-ca-db-new
        - name: shared-storage
          mountPath: /ca
          subPath: shop-ca-config
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-storage-claim
